test/arrays/bradc/scalarArrMismatch.good
scalarArrMismatch.chpl:4: error: Cannot initialize a value of type 'real(32)' from a 'real(64)'
